@@ -10,6 +10,7 @@ t/object.t
 t/seekable.t
 t/cmp.t
 t/fork.t
+t/lock.t
 ChangeLog
 misc/benchmark.pl
 misc/results.txt
